--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,5 +84,20 @@
     <string name="no_record">No record found.</string>
     <string name="accepted">Accepted</string>
     <string name="pending">Pending</string>
+    <string name="call">Call</string>
+    <string name="cancel_booking">Cancel Booking</string>
+    <string name="track">Track</string>
+    <string name="feedback">Feedback</string>
+    <string name="ambulance_no">Ambulance No:</string>
+    <string name="sample_amb_num">QW 2502 T</string>
+    <string name="details">Details:</string>
+    <string name="title_activity_maps">Map</string>
+    <string name="add_contact">Add Contact</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="full_name">Full Name</string>
+    <string name="delete">Delete</string>
+    <string name="enter_destination">Please enter destination</string>
+    <string name="destination1">Destination:</string>
 
 </resources>
