--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,12 @@
         <item>Emergency Contacts</item>
     </string-array>
 
+    <string-array name="nav_item_driver_titles">
+        <item>Home</item>
+        <item>View Bookings</item>
+        <item>Emergency</item>
+    </string-array>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="login_as_driver">Login as Driver</string>
     <string name="login_as_customer">Login as Customer</string>
@@ -99,5 +105,7 @@
     <string name="delete">Delete</string>
     <string name="enter_destination">Please enter destination</string>
     <string name="destination1">Destination:</string>
+    <string name="cancelled">Cancelled</string>
+    <string name="booking_success">Booking cancelled successfully</string>
 
 </resources>
